Updated RAG notebook with new changes

--- a/RAG_implementation_from_Scratch.ipynb
+++ b/RAG_implementation_from_Scratch.ipynb
@@ -529,50 +529,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 1,
    "id": "1594e969-6fab-47a0-8d9c-2d603366335d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#configuiring llm in local system\n"
+    "\n",
+    "#will be workign with the ollama on the local system as llm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "63bb5b9d-aa16-4f72-b839-64f32bfccaa0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/bishalkumarshah/Learning_RAG\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "2461af16-4598-4a8b-b906-5edeee7e2089",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reinitialized existing Git repository in /Users/bishalkumarshah/Learning_RAG/.git/\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "dcc7e089-de27-45d0-8009-3faf28b88d70",
+   "id": "5f507b2c-b3f1-4cee-be6e-9f8669d2503a",
    "metadata": {},
    "outputs": [],
    "source": []
