Updated notebook with new changes

--- a/RAG_implementation_from_Scratch.ipynb
+++ b/RAG_implementation_from_Scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "e86d8b3e-60ca-411c-a370-b5f44961392a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "id": "bfe27c57-db58-495f-8287-0c8f5ea897be",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        " 'Visit an amusement park and ride the roller coasters.']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "id": "adcbc283-6806-4e36-890d-29a45ce23c95",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "id": "b88099f9-0c09-41c6-965e-81af61e6202a",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "id": "fde1b3cd-4dd0-4b9a-8bdf-5454d8b1c3bb",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "id": "aecabb61-461f-4581-9756-b5b9f425e47b",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "['i', 'am', 'an', 'indian', 'and', 'i', 'lives', 'in', 'india']"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 15,
    "id": "83c9c35c-28b4-4e00-9281-c1daf56789e2",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 17,
    "id": "3caa43e0-c050-4b87-9a93-8e7e58ba3c5c",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "['india', 'is', 'a', 'country', 'for', 'indians', 'and', 'for', 'everyone']"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "id": "4c8d8359-684d-486e-9ac4-183bea02fbcd",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 21,
    "id": "0271d93e-e89c-427a-81f6-5656b7cf7c80",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "         'india': 1})"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 23,
    "id": "09be32e6-df92-4509-a150-395129feb503",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 25,
    "id": "9fce26fc-0e57-4e7a-8c52-08b7992dd896",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "         'everyone': 1})"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "id": "69399877-fbe6-4d8e-9e8e-aa8c42150987",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 29,
    "id": "3bd963b2-3776-492a-931f-a88a7fd1cc2f",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "[2, 1, 1, 1, 1, 1, 1, 1]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 31,
    "id": "b412a28e-f86d-440d-bb65-896db4c01759",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 33,
    "id": "bbb47890-4842-4369-9ba3-ce0d4f465df6",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "[1, 1]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 35,
    "id": "c8468da4-dd01-4052-8968-f45e22103371",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 37,
    "id": "05ac06d7-a21a-4adc-8eba-59eb8a145567",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 39,
    "id": "ba172843-0aa1-4ff6-b93f-b23f8c6b4533",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "3.3166247903554"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 41,
    "id": "2c06a131-db12-49a4-8df1-7fb148e9a748",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 43,
    "id": "39ffd1d9-5ffc-4633-9bce-40f948eaaacf",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "3.3166247903554"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 45,
    "id": "ca2f096b-bd8d-4258-9931-6ad5c2d607ba",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 47,
    "id": "d3eb7965-8e9e-47ba-b9fc-a19518e06e4c",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "0.18181818181818182"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 49,
    "id": "c9a8efc6-34c3-4595-86de-4d3dc85a4da5",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 51,
    "id": "f63abfba-8ac5-4851-9c6c-263849bc1980",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        "0.18181818181818182"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 53,
    "id": "a5ccf31d-64cf-44cd-beb5-852a334ab6f3",
    "metadata": {},
    "outputs": [],
@@ -448,23 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 55,
    "id": "7355a38b-189f-4ea3-8b8d-2eacee352010",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Take a leisurely walk in the park and enjoy the fresh air. Visit a local museum and discover something new.',\n",
-       " 'Attend a live music concert and feel the rhythm. Go for a hike and admire the natural scenery.',\n",
+       "['Take a leisurely walk in the park and enjoy the fresh air.Visit a local museum and discover something new.Attend a live music concert and feel the rhythm.Go for a hike and admire the natural scenery.',\n",
        " 'Have a picnic with friends and share some laughs.',\n",
-       " 'Explore a new cuisine by dining at an ethnic restaurant. Take a yoga class and stretch your body and mind.',\n",
+       " 'Explore a new cuisine by dining at an ethnic restaurant.Take a yoga class and stretch your body and mind.',\n",
        " 'Join a local sports league and enjoy some friendly competition.',\n",
        " \"Attend a workshop or lecture on a topic you're interested in.\",\n",
        " 'Visit an amusement park and ride the roller coasters.']"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 57,
    "id": "55095885-0ce3-44f3-99d1-f5e2d8e6bc6f",
    "metadata": {},
    "outputs": [
@@ -529,7 +528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
+   "id": "df84d626-59d2-443c-9770-e87b1a51c858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relevant_documents =return_response(user_query, corpus_of_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "1594e969-6fab-47a0-8d9c-2d603366335d",
    "metadata": {},
    "outputs": [],
@@ -539,9 +548,158 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "3225f9b0-d595-44d3-a4b9-a7c446fd267a",
+   "metadata": {},
+   "source": [
+    "relevant_documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e55fe15b-01c9-4882-b5f4-1cd55e852d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_query=\"i love exploring\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "5c91d16f-93fc-4ef3-997a-1d643029ede5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relevant_documents =return_response(user_query, corpus_of_documents)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "efc5eeb1-2380-4258-be73-3ca442df195f",
+   "metadata": {},
+   "source": [
+    "relevant_documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "5f507b2c-b3f1-4cee-be6e-9f8669d2503a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relaxation mode activated! Based on your request, I recommend \"reading a book\" this weekend. It's a great way to unwind and escape into a different world for a while. You can grab a cup of tea, get cozy, and let the words transport you to a calming state. Perfect for recharging!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# Define the prompt template\n",
+    "prompt = \"\"\"\n",
+    "You are a bot that makes recommendations for activities. \n",
+    "You answer in a very short 4-5 sentence. \n",
+    "This is recommended_activities: {relevant_documents}  \n",
+    "The user input is: {user_input}  \n",
+    "Compile a recommendation to the user based on the recommended activity and user input.\n",
+    "\"\"\"\n",
+    "\n",
+    "# API endpoint\n",
+    "url = 'http://localhost:11434/api/generate'\n",
+    "\n",
+    "# Replace with your actual variables\n",
+    "user_input = \"I want to relax this weekend\"\n",
+    "relevant_documents = [\"go hiking\", \"read a book\", \"watch a movie\"]\n",
+    "\n",
+    "# Prepare request payload\n",
+    "data = {\n",
+    "    \"model\": \"llama3\",\n",
+    "    \"prompt\": prompt.format(\n",
+    "        user_input=user_input, \n",
+    "        relevant_documents=relevant_documents\n",
+    "    )\n",
+    "}\n",
+    "\n",
+    "# Headers for JSON data\n",
+    "headers = {'Content-Type': 'application/json'}\n",
+    "\n",
+    "# Send request to the API\n",
+    "response = requests.post(url, data=json.dumps(data), headers=headers, stream=True)\n",
+    "\n",
+    "full_response = []\n",
+    "\n",
+    "try:\n",
+    "    for line in response.iter_lines():\n",
+    "        # Filter out keep-alive new lines\n",
+    "        if line:\n",
+    "            decoded_line = json.loads(line.decode('utf-8'))\n",
+    "            # Collect the model response\n",
+    "            full_response.append(decoded_line['response'])\n",
+    "finally:\n",
+    "    response.close()\n",
+    "\n",
+    "# Print the full compiled response\n",
+    "print(''.join(full_response))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f507b2c-b3f1-4cee-be6e-9f8669d2503a",
+   "id": "789f2512-0ad1-4387-830a-f077e9bc9472",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1fb63d6-3a40-4541-8493-1b89c5153188",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d936e1a3-63bc-42ed-a993-4a1e0ebd3c7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39f0c55a-b374-42e5-8ea1-432c1642ae6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1985574f-dff1-40da-b3bf-7227dbbedd38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "284fc3d8-5796-46f7-92d9-cd773a22a858",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d2b74dc-969a-420d-97fd-f9084778a1af",
    "metadata": {},
    "outputs": [],
    "source": []
